auto_sink/c/test.txt
auto_sink.cpp: In function ‘int get_lowest_cost_source(const string_set&, const string_int_map&)’:
auto_sink.cpp:262:44: error: passing ‘const string_int_map {aka const std::map<std::__cxx11::basic_string<char>, int>}’ as ‘this’ argument discards qualifiers [-fpermissive]
     if (cost_map.count(*it) && cost_map[*it] < source_cost)
                                            ^
In file included from /usr/include/c++/5/map:61:0,
                 from auto_sink.cpp:3:
/usr/include/c++/5/bits/stl_map.h:474:7: note:   in call to ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::__cxx11::basic_string<char>; _Tp = int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, int> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = int; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::__cxx11::basic_string<char>]’
       operator[](const key_type& __k)
       ^
auto_sink.cpp:264:33: error: passing ‘const string_int_map {aka const std::map<std::__cxx11::basic_string<char>, int>}’ as ‘this’ argument discards qualifiers [-fpermissive]
       source_cost = cost_map[*it];
                                 ^
In file included from /usr/include/c++/5/map:61:0,
                 from auto_sink.cpp:3:
/usr/include/c++/5/bits/stl_map.h:474:7: note:   in call to ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::__cxx11::basic_string<char>; _Tp = int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, int> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = int; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::__cxx11::basic_string<char>]’
       operator[](const key_type& __k)
       ^
